[package]
name = "rsxchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
reqwest = { version = "0.11.22", features = ["json", "default", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
tokio = { version = "1.34.0", features = ["full"] }
strum = { version = "0.21", features = ["derive"] }
serde_json = "1.0.108"
field_accessor = "0"
